--- a/tablesoft-net/TableSoft/TableSoft/html/email.html
+++ b/tablesoft-net/TableSoft/TableSoft/html/email.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="es">
 
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -373,11 +373,11 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
-                                            <p>Saludos, *NOMBREPH* *APELLIDOPH*</p>
+                                            <p>Saludos, *NOMBREPH* *APELLIDOPH*:</p>
                                             <p>Tienes un nuevo usuario en el sistema Yanapay.</p>
-                                            <p>Puedes iniciar sesion como <b>*TIPOPH*</b> con las siguientes credenciales:</p>
+                                            <p>Puedes iniciar sesión como <b>*TIPOPH*</b> con las siguientes credenciales:</p>
                                             <p><br /><b>Email: </b>*EMAILPH*</p>
-                                            <p><b>Password: </b>*PASSPH*<br /><br /></p>
+                                            <p><b>Contraseña: </b>*PASSPH*<br /><br /></p>
                                             <p>Un cordial saludo,<br /></p>
                                             <p>Sistema de Mesa de Ayuda Yanapay</p>
                                         </td>
